[end]chapter7（課題はまだ）staffにおけるユーザー認証のためのdb操作の既定

--- a/app/assets/stylesheets/staff/layout.scss
+++ b/app/assets/stylesheets/staff/layout.scss
@@ -23,6 +23,10 @@ header {
     span.logo-mark {
         font-weight: bold;
     }
+    a {
+        float: right;
+        color: $very_light_gray;
+    }
 }
 
 footer {
