--- a/app/assets/stylesheets/admin/layout.scss
+++ b/app/assets/stylesheets/admin/layout.scss
@@ -23,6 +23,10 @@ header {
     span.logo-mark {
         font-weight: bold;
     }
+    a {
+        float: right;
+        color: $very_light_gray;
+    }
 }
 
 footer {
