--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <div id = "wrapper">
-      <%= render "staff/shared/header" %>
+      <%= render "admin/shared/header" %>
       <div id = "container">
         <%= yield %>
       </div>
